recipe route & collection

--- a/imports/ui/layouts/mainlayout.html
+++ b/imports/ui/layouts/mainlayout.html
@@ -1,3 +1,4 @@
+<!-- Main layout for sub templates -->
 <template name="MainLayout">
 	<header>
 		<h1>My Recipe Book</h1>
@@ -7,3 +8,4 @@
 		{{>Template.dynamic template=main}}
 	</main>
 </template>
+
