--- a/imports/ui/layouts/recipes/newRecipe.html
+++ b/imports/ui/layouts/recipes/newRecipe.html
@@ -1,6 +1,6 @@
 
 <template name="NewRecipe">
 	<div id="new-recipe-container">
-		{{> quickForm collection=formCollection id="insertRecipeForm" type="insert"}}
+		{{> quickForm collection=formCollection id="insertRecipeForm" type="insert" class="new-recipe-form"}}
 	</div>
 </template>
