--- a/imports/ui/layouts/mainlayout.html
+++ b/imports/ui/layouts/mainlayout.html
@@ -1,10 +1,8 @@
 <!-- Main layout for sub templates -->
 <template name="MainLayout">
-	<header>
-		<h1>My Recipe Book</h1>
-		{{>loginButtons}}
-	</header>
-	<main>
+	{{> Header}}
+	{{> SideNav}}
+	<main class="main-layout">
 		{{>Template.dynamic template=main}}
 	</main>
 </template>
