--- a/imports/ui/layouts/recipes/recipe-book.html
+++ b/imports/ui/layouts/recipes/recipe-book.html
@@ -1,3 +1,14 @@
 <template name="Recipes">
 	{{> NewRecipe}}
+	
+	
+	<section class="">
+		{{#if Template.subscriptionsReady}}
+			{{#each recipes}}
+				{{> Recipe}}
+			{{/each}}
+		{{else}}
+			<p>Loading</p>
+		{{/if}}
+	</section>
 </template>
