--- a/imports/ui/layouts/recipes/recipe-book.html
+++ b/imports/ui/layouts/recipes/recipe-book.html
@@ -1,7 +1,9 @@
 <template name="Recipes">
-	{{> NewRecipe}}
-	
-	
+	{{#if $.Session.get 'newRecipe'}}
+		{{> NewRecipe}}
+	{{else}}
+		<button class="new-recipe">New Recipe</button>
+	{{/if}}
 	<section class="">
 		{{#if Template.subscriptionsReady}}
 			{{#each recipes}}
