--- a/imports/ui/layouts/recipes/Recipe.html
+++ b/imports/ui/layouts/recipes/Recipe.html
@@ -1,17 +1,26 @@
 <template name="Recipe">
 	<div class="recipe {{#if inMenu}}in-menu{{/if}}">
 		<h3>{{name}}</h3>
-		<p>{{desc}}</p>
-		<p>
-			{{#each ingredients}}
-				<span class="ingredient">{{name}} - {{amount}}</span>
-			{{/each}}
-		</p>
-		<a href="/recipe/{{_id}}">View Details</a>
-		{{#if inMenu}}
-			<button class="btn-deny toggle-menu">Remove From Menu</button>
+		{{#if editMode}}
+			{{> quickForm collection=recipe id=updateRecipeId type="update" doc=this autosave=true}}
 		{{else}}
-			<button class="btn-primary toggle-menu">Add To Menu</button>
+			<p>{{desc}}</p>
+			<p>
+				{{#each ingredients}}
+					<span class="ingredient">{{name}} - {{amount}}</span>
+				{{/each}}
+			</p>
+			<a href="/recipe/{{_id}}">View Details</a>
+			{{#if inMenu}}
+				<button class="btn-deny toggle-menu">Remove From Menu</button>
+			{{else}}
+				<button class="btn-primary toggle-menu">Add To Menu</button>
+			{{/if}}
 		{{/if}}
+		
+		<i class="fa fa-pencil"></i>
+		<i class="fa fa-trash"></i>
+		
+		
 	</div>
 </template>
