--- a/imports/ui/layouts/recipes/newRecipe.html
+++ b/imports/ui/layouts/recipes/newRecipe.html
@@ -1,6 +1,7 @@
 
 <template name="NewRecipe">
 	<div class="new-recipe-container">
+		<i class="fa fa-close"></i>
 		{{> quickForm collection=formCollection id="insertRecipeForm" type="insert" class="new-recipe-form"}}
 	</div>
 </template>
